--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install dependencies
         if: steps.cache-opam.outputs.cache-hit != 'true'
         run: |
-          opam install alcotest ppx_deriving
+          opam install -y alcotest ppx_deriving
           opam install . --deps-only --with-doc --with-test --locked --unlock-base
       - name: Recover from an Opam broken state
         if: steps.cache-opam.outputs.cache-hit == 'true'
