--- a/test/dune
+++ b/test/dune
@@ -1,11 +1,5 @@
 (test
  (name test)
- (libraries
-  conformist
-  alcotest)
+ (libraries conformist alcotest)
  (preprocess
-  (pps
-   ppx_fields_conv
-   ppx_deriving.eq
-   ppx_deriving.show
-   ppx_deriving.make)))
+  (pps ppx_fields_conv ppx_deriving.eq ppx_deriving.show ppx_deriving.make)))
