--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Retrieve opam cache
         uses: actions/cache@v2
         if: runner.os != 'Windows'
@@ -29,18 +30,40 @@ jobs:
           key: v1-${{ runner.os }}-opam-${{ matrix.ocaml-version }}-${{ hashFiles('*.opam.locked') }}
           restore-keys: |
             v2-${{ runner.os }}-opam-${{ matrix.ocaml-version }}-
+
       - name: Use OCaml ${{ matrix.ocaml-version }}
         uses: avsm/setup-ocaml@v1
         with:
           ocaml-version: ${{ matrix.ocaml-version }}
+
+      - name: Update opam repository
+        if: steps.cache-opam.outputs.cache-hit != 'true'
+        run: opam update
+
+      - name: Pin package
+        run: opam pin add . --yes --no-action
+
+      - name: Query and install external dependencies
+        run: opam depext conformist --yes --with-doc --with-test
+
       - name: Install dependencies
         if: steps.cache-opam.outputs.cache-hit != 'true'
         run: |
           opam install -y . --deps-only --with-doc --with-test --locked --unlock-base
-      - name: Recover from an Opam broken state
-        if: steps.cache-opam.outputs.cache-hit == 'true'
+          opam install ocamlformat --skip-updates
+
+      - name: Upgrade dependencies
         run: opam upgrade --fixup
+        if: steps.cache-opam.outputs.cache-hit == 'true'
+
       - name: Build
         run: make build
+
+      - name: Check formatting
+        run: make format
+
+      - name: Build docs
+        run: make doc
+
       - name: Run tests
         run: make test
