--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,3 @@
 (test
  (name test)
- (libraries conformist alcotest)
- (preprocess
-  (pps ppx_fields_conv ppx_deriving.eq ppx_deriving.show ppx_deriving.make)))
+ (libraries conformist alcotest sexplib))
