--- a/conformist.opam
+++ b/conformist.opam
@@ -24,7 +24,7 @@ depends: [
   "sexplib" {>= "v0.13.0" & with-test}
 ]
 build: [
-  ["dune" "subst"] {dev}
+  ["dune" "subst"] {pinned}
   [
     "dune"
     "build"
