--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 name: CI
-
 on: [push, pull_request]
 
 jobs:
@@ -12,49 +11,24 @@ jobs:
         os:
           - macos-latest
           - ubuntu-latest
-        ocaml-version:
-          - 4.11.1
-          - 4.10.1
-          - 4.09.1
-          - 4.08.1
+        ocaml-compiler:
+          - 4.12.*
+          - 4.11.*
+          - 4.10.*
+          - 4.09.*
+          - 4.08.*
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Retrieve opam cache
-        uses: actions/cache@v2
-        if: runner.os != 'Windows'
-        id: cache-opam
-        with:
-          path: ~/.opam
-          key: v1-${{ runner.os }}-opam-${{ matrix.ocaml-version }}-${{ hashFiles('*.opam.locked') }}
-          restore-keys: |
-            v2-${{ runner.os }}-opam-${{ matrix.ocaml-version }}-
-
       - name: Use OCaml ${{ matrix.ocaml-version }}
-        uses: avsm/setup-ocaml@v1
+        uses: ocaml/setup-ocaml@v2
         with:
-          ocaml-version: ${{ matrix.ocaml-version }}
-
-      - name: Update opam repository
-        if: steps.cache-opam.outputs.cache-hit != 'true'
-        run: opam update
-
-      - name: Pin package
-        run: opam pin add . --yes --no-action
-
-      - name: Query and install external dependencies
-        run: opam depext conformist --yes --with-doc --with-test
+          ocaml-compiler: ${{ matrix.ocaml-compiler }}
+          dune-cache: ${{ matrix.os != 'macos-latest' }}
 
       - name: Install dependencies
-        if: steps.cache-opam.outputs.cache-hit != 'true'
-        run: |
-          opam install -y . --deps-only --with-doc --with-test --locked --unlock-base
-          opam install ocamlformat --skip-updates
-
-      - name: Upgrade dependencies
-        run: opam upgrade --fixup
-        if: steps.cache-opam.outputs.cache-hit == 'true'
+        run: make deps
 
       - name: Build
         run: make build
