--- a/conformist.opam
+++ b/conformist.opam
@@ -17,14 +17,16 @@ homepage: "https://github.com/oxidizing/conformist"
 doc: "https://oxidizing.github.io/conformist/"
 bug-reports: "https://github.com/oxidizing/conformist/issues"
 depends: [
-  "dune" {>= "2.4"}
+  "dune" {>= "2.7" & >= "2.4"}
   "ocaml" {>= "4.08.0"}
   "ptime" {>= "0.8.5"}
   "alcotest" {>= "1.2.3" & with-test}
   "sexplib" {>= "v0.13.0" & with-test}
+  "odoc" {with-doc}
 ]
+conflicts: [ "result" {< "1.5"} ]
 build: [
-  ["dune" "subst"] {pinned}
+  ["dune" "subst"] {dev}
   [
     "dune"
     "build"
