--- a/conformist.opam
+++ b/conformist.opam
@@ -24,6 +24,9 @@ depends: [
   "sexplib" {>= "v0.13.0" & with-test}
   "odoc" {with-doc}
 ]
+conflicts: [
+  "result" {< "1.5"}
+]
 build: [
   ["dune" "subst"] {dev}
   [
